--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img class="w-25" src="../The panda proyect/paginas/img/panda.png" alt="">
+            <img class="w-25" src="../bs/img/panda.png" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,29 +25,27 @@
           <nav class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Panda House</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="https://cafeselcriollo.com/listados/quince-tipos-de-cafe-segun-su-elaboracion/">Tipos de cafes</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                  Opciones
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="../bs/paginas/contactopanda.html">Contacto</a></li>
+                  <li><a class="dropdown-item" href="../bs/paginas/productos.html">Productos</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="../bs/paginas/ubicacion.html">Donde encontrarnos</a></li>
                 </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
+              
             </ul>
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Buscar">
+              <button class="btn btn-outline-success" type="submit">Panda search</button>
             </form>
           </div>
         </div>
@@ -59,7 +57,7 @@
 
             <div class="row flex-lg-row-reverse">
                 <div class="col-lg-6">
-                    <img class="w-100" src="../The panda proyect/paginas/img/frente del local.jpeg" alt="" class="img-fluid">
+                    <img class="w-100" src="../bs/img/frente del local.jpeg" alt="" class="img-fluid">
                 </div>
 
                 <div class="text-center text-lg-start col lg-6 d-lg-flex flex-lg-column align-items-lg-start justify-content-lg-center">
@@ -74,8 +72,7 @@
         <section class="container">
             <hr>
             <h2 class="fw-bold display-6">
-                Que dicen <br> 
-                <span class="c-dorado fw-bold display-4">nuestros clientes</span>
+                Nuestras <span class="c-dorado fw-bold display-4">delicias</span>
             </h2>
 
             <div id="carouselExampleIndicators" class="carousel slide">
@@ -86,13 +83,13 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../The panda proyect/paginas/img/cafe en barra.jpeg" class="d-block w-100" alt="...">
+                    <img src="../bs/img/desayuno panda.jpeg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="../The panda proyect/paginas/img/medialuna y cafe.jpeg" class="d-block w-100" alt="...">
+                    <img src="../bs/img/medialuna y cafe.jpeg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="../The panda proyect/paginas/img/sup 2 cafes y budin.jpeg" class="d-block w-100" alt="...">
+                    <img src="../bs/img/2 cafes y budin.jpeg" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -118,8 +115,8 @@
                         <input type="submit" class="btn-marron align-self-center">
                     </form>
                 </div>
-                <div class="col-lg-3">
-                    <img class="w-25" src="../The panda proyect/paginas/img/desayuno panda.jpeg" alt=""class="d-none d-lg-inline-block">
+                <div class="col-lg-3 col-sm-3 align-items-sm-center">
+                    <img class="w-50" src="../bs/img/desayuno panda.jpeg" alt="">
                 </div>
             </div>
 
@@ -130,15 +127,15 @@
 
         <div class="container">
 
-            <div class="row justify-content-md-between align-items-lg-center border-bottom p-3">
-               <div class="col-md-3 d-flex flex-column align-items-center">
-                <img class="w-50" src="../The panda proyect/paginas/img/panda.png" alt="">
+            <div class="row justify-content-sm-between align-items-lg-center border-bottom p-3">
+               <div class="col-sm-3 d-flex flex-column align-items-center">
+                <img class="w-50" src="../bs/img/panda.png" alt="">
                 <p> Panda coffe / Todos los derechos reservados</p>
                 <p>thc@jphlions.com</p>
                </div>
             </div>
 
-            <div class="col-md-3 d-flex flex-column align-items-center my-4">
+            <div class="col-sm-3 d-flex flex-column align-items-center my-4">
                 <h3>nuestras redes</h3>
                 <div class="d-flex gap-3">
                 <i class="bi bi-instagram fs-3"></i>
@@ -151,7 +148,7 @@
 
             </div>
 
-            <div class="col-md-3 d-flex flex-column align-items-center">
+            <div class="col-sm-3 d-flex flex-column align-items-center">
                 <h4>suscribite a nuestros newsletter</h4>
                 <form action="" class="d-flex gap-1">
                        <input type="text" class="form-control">
