--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <link rel="stylesheet" href="../bs/estilos.css">
+    <link rel="stylesheet" href="./estilos.css">
 
     <title>PANDA CON BS</title>
 </head>
@@ -16,12 +16,14 @@
  
     <header class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-          <a class="navbar-brand" href="#">
-            <img class="w-25" src="../bs/img/panda.png" alt="">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+          <div class="d-flex justify-content-sm-between align-items-center">
+            <a class="navbar-brand" href="#">
+              <img class="w-25" src="./img/panda.png" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
           <nav class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item">
@@ -35,10 +37,10 @@
                   Opciones
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="../bs/paginas/contactopanda.html">Contacto</a></li>
-                  <li><a class="dropdown-item" href="../bs/paginas/productos.html">Productos</a></li>
+                  <li><a class="dropdown-item" href="./paginas/contactopanda.html">Contacto</a></li>
+                  <li><a class="dropdown-item" href="./paginas/productos.html">Productos</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="../bs/paginas/ubicacion.html">Donde encontrarnos</a></li>
+                  <li><a class="dropdown-item" href="./paginas/ubicacion.html">Donde encontrarnos</a></li>
                 </ul>
               </li>
               
@@ -57,7 +59,7 @@
 
             <div class="row flex-lg-row-reverse">
                 <div class="col-lg-6">
-                    <img class="w-100" src="../bs/img/frente del local.jpeg" alt="" class="img-fluid">
+                    <img class="w-100" src="./img/frente del local.jpeg" alt="" class="img-fluid">
                 </div>
 
                 <div class="text-center text-lg-start col lg-6 d-lg-flex flex-lg-column align-items-lg-start justify-content-lg-center">
@@ -83,13 +85,13 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../bs/img/desayuno panda.jpeg" class="d-block w-100" alt="...">
+                    <img src="./img/desayuno panda.jpeg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="../bs/img/medialuna y cafe.jpeg" class="d-block w-100" alt="...">
+                    <img src="./img/medialuna y cafe.jpeg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="../bs/img/2 cafes y budin.jpeg" class="d-block w-100" alt="...">
+                    <img src="./img/2 cafes y budin.jpeg" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -106,17 +108,17 @@
 
         <section class="container">
             <div class="row shadow-lg p-3 mb-5 bg-body-tertiary rounded">
-                <div class="col-lg-9 text-center text-lg-start">
+                <div class="col-sm-12 col-lg-9 text-center text-lg-start">
                     <h2 class="fw-bold">Proba nuestras delicias</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem culpa beatae ratione ea vel. Officia, ipsa asperiores debitis vel quia ut. Laboriosam magnam sint delectus ad praesentium fugit pariatur earum.</p>
                     <form action="" class="d-flex flex-column flex-lg-row gap-2">
                         <input type="text" class="form-control"></input>
                         <input type="text" class="form-control"></input>
-                        <input type="submit" class="btn-marron align-self-center">
+                        <input type="submit" class="btn-marron align-self-center my-2">
                     </form>
                 </div>
-                <div class="col-lg-3 col-sm-3 align-items-sm-center">
-                    <img class="w-50" src="../bs/img/desayuno panda.jpeg" alt="">
+                <div class="col-sm-12 col-lg-3 col-sm-3 align-items-sm-center">
+                    <img class="img-fluid" src="./img/desayuno panda.jpeg" alt="">
                 </div>
             </div>
 
@@ -126,35 +128,46 @@
     <footer class="bg-blue text-white p-3">
 
         <div class="container">
+           <div class="row">
 
-            <div class="row justify-content-sm-between align-items-lg-center border-bottom p-3">
-               <div class="col-sm-3 d-flex flex-column align-items-center">
-                <img class="w-50" src="../bs/img/panda.png" alt="">
-                <p> Panda coffe / Todos los derechos reservados</p>
-                <p>thc@jphlions.com</p>
-               </div>
-            </div>
-
-            <div class="col-sm-3 d-flex flex-column align-items-center my-4">
-                <h3>nuestras redes</h3>
-                <div class="d-flex gap-3">
-                <i class="bi bi-instagram fs-3"></i>
-                <i class="bi bi-facebook fs-3"></i>
-                <i class="bi bi-twitter fs-3"></i>
-                <i class="bi bi-youtube fs-3"></i>
-                <i class="bi bi-linkedin fs-3"></i>
+             <div class="col-lg-4 justify-content-sm-between align-items-lg-center ">
+                <div class="d-flex flex-column align-items-center">
+                 <img class="img-fluid img-footer" src="./img/panda.png" alt="">
+                 <p> Panda coffe / Todos los derechos reservados</p>
+                 <p>thc@jphlions.com</p>
                 </div>
-
-
-            </div>
-
-            <div class="col-sm-3 d-flex flex-column align-items-center">
-                <h4>suscribite a nuestros newsletter</h4>
-                <form action="" class="d-flex gap-1">
-                       <input type="text" class="form-control">
-                       <input type="submit" class="btn-marron">
-                </form>
-            </div>
+             </div>
+ 
+             <div class="col-lg-4 justify-content-center d-flex flex-column align-items-center my-4">
+                 <h3>nuestras redes</h3>
+                 <div class="d-flex gap-3">
+                   <a href="https://www.instagram.com/pandacoffee.ar/" target="_blank">
+                     <i class="bi bi-instagram fs-3"></i>  
+                   </a> <a href="https://www.facebook.com/marketplace/buenosaires/search?query=cableado%20vento%2020%20tfsi&locale=es_LA" target="_blank">
+                     <i class="bi bi-facebook fs-3"></i>  
+                   </a>
+                   <a href="https://x.com/?lang=es" target="_blank">
+                     <i class="bi bi-twitter fs-3"></i>  
+                   </a>
+                   <a href="https://www.youtube.com/watch?v=aoMGnerCCps" target="_blank">
+                     <i class="bi bi-youtube fs-3"></i>  
+                   </a>
+                   <a href="https://ar.linkedin.com" target="_blank">
+                     <i class="bi bi-linkedin fs-3"></i>  
+                   </a>
+                 </div>
+ 
+ 
+             </div>
+ 
+             <div class="col-lg-4 justify-content-center d-flex flex-column align-items-center">
+                 <h4>suscribite a nuestros newsletter</h4>
+                 <form action="" class="d-flex gap-1">
+                        <input type="text" class="form-control">
+                        <input type="submit" class="btn-marron">
+                 </form>
+             </div>
+           </div>
 
         </div>
         <hr>
